syntax = "proto3";

package ai.lzy.v1.workflow;

option java_outer_classname = "LWFPS";
option java_package = "ai.lzy.v1.workflow";

service LzyWorkflowPrivateService {
  rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse);
  rpc AbortExecution (AbortExecutionRequest) returns (AbortExecutionResponse);
}

message DeleteWorkflowRequest {
  string workflowName = 1;
}

message DeleteWorkflowResponse {}

message AbortExecutionRequest {
  string executionId = 1;
  string reason = 2;
}

message AbortExecutionResponse {}
